--- a/prueba.html
+++ b/prueba.html
@@ -12,6 +12,7 @@
   <h1>Lorem ipsum dolor sit amet.</h1>
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam eum exercitationem provident porro odio itaque
     voluptatem est deleniti pariatur, corporis quibusdam magni accusantium aliquid error mollitia ex fugiat sint et!</p>
+  <h2>Lorem ipsum dolor sit.</h2>
 </body>
 
 </html>
